src/renderer/components/projectlist/ProjectList.css
.popup-container {
  position: fixed;
  width: 100%;
  height: 100%;
  backdrop-filter: brightness(0.9) blur(3px);
  display: flex;
  z-index: 19;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.member-container {
  min-height: 50vh;
  width: 75%;
  background-color: white;
  padding: 1.5rem;
  border-radius: 1rem;
}

.mm-header {
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: space-between;
}

.mm-membership {
  font-size: medium;
  margin-left: auto;
  padding: 4px 15px;
  border-radius: 2%;
}

.mm-invite {
  border: 2px solid green;
}

.mm-join {
  border: 2px solid #40a9ff;
}

.title {
  font-size: x-large;
  font-weight: 500;
  margin-top: 1.5rem;
  margin-bottom: 2.5rem;
}

